kubernetes/apps/network/external-resources/omada-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada-nginx-proxy
  namespace: network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omada-nginx-proxy
  template:
    metadata:
      labels:
        app: omada-nginx-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:1.28-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: omada-nginx-config
