kubernetes/apps/network/external-resources/omada-caddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omada-caddy-proxy
  namespace: network
spec:
  selector:
    app: omada-caddy-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
