kubernetes/apps/network/external-resources/omada-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omada-nginx-proxy
  namespace: network
spec:
  selector:
    app: omada-nginx-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
