kubernetes/apps/network/external-resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: "10.5.0.10:30077"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "~https://(.+):30077/(.+)/login$"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://$1/$2/login"
spec:
  ingressClassName: "internal"
  rules:
    - host: omada.nikola.wtf
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omada-controller
                port:
                  number: 30077
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: "10.5.0.10:80"
spec:
  ingressClassName: "internal"
  rules:
    - host: truenas.milojevic.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 80
